Upgrade back to JDK17