@@ -61,8 +61,7 @@ class TsdlQueryParserTest {
     @ParameterizedTest
     @ArgumentsSource(SampleDeclarationSamplesArgumentsProvider.class)
     void sampleDeclaration_knownAggregatorFunctionsWithoutEcho(String aggregator, Class<? extends TsdlSample> clazz) {
-      var queryString = String.format("WITH SAMPLES: %s(_input) AS s1\n"
-          + "          YIELD: all periods", aggregator);
+      var queryString = "WITH SAMPLES: %s(_input) AS s1\n          YIELD: all periods".formatted(aggregator);
 
       var query = PARSER.parseQuery(queryString);
 
@@ -80,8 +79,7 @@ class TsdlQueryParserTest {
     @ParameterizedTest
     @ArgumentsSource(SampleDeclarationSamplesArgumentsProvider.class)
     void sampleDeclaration_knownAggregatorFunctionsWithEcho(String aggregator, Class<? extends TsdlSample> clazz) {
-      var queryString = String.format("WITH SAMPLES: %s(_input) AS s1->echo(9)\n"
-          + "          YIELD: all periods", aggregator);
+      var queryString = "WITH SAMPLES: %s(_input) AS s1->echo(9)\n          YIELD: all periods".formatted(aggregator);
 
       var query = PARSER.parseQuery(queryString);
 
@@ -102,8 +100,7 @@ class TsdlQueryParserTest {
     @ParameterizedTest
     @ArgumentsSource(SampleDeclarationSamplesArgumentsProvider.class)
     void sampleDeclaration_knownAggregatorFunctionsWithInvalidEchoArgument_throws(String aggregator) {
-      var queryString = String.format("WITH SAMPLES: %s(_input) AS s1 -> echo(NaN)\n"
-          + "          YIELD: all periods", aggregator);
+      var queryString = "WITH SAMPLES: %s(_input) AS s1 -> echo(NaN)\n          YIELD: all periods".formatted(aggregator);
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString)).isInstanceOf(TsdlParserException.class);
     }
@@ -111,8 +108,7 @@ class TsdlQueryParserTest {
     @ParameterizedTest
     @ValueSource(strings = {"_", "_s1", "sö", "", "123", "1s"})
     void sampleDeclaration_invalidIdentifier_throws(String identifier) {
-      var queryString = String.format("WITH SAMPLES: avg(_input) AS %s\n"
-          + "          YIELD: all periods", identifier);
+      var queryString = "WITH SAMPLES: avg(_input) AS %s\n          YIELD: all periods".formatted(identifier);
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString)).isInstanceOf(TsdlParserException.class);
     }
@@ -124,9 +120,10 @@ class TsdlQueryParserTest {
 
     @Test
     void filterDeclaration_conjunctiveFilterWithOneArgument() {
-      var queryString = "FILTER:\n"
-          + "            AND(gt(23.4))\n"
-          + "          YIELD: data points";
+      var queryString = """
+          FILTER:
+                      AND(gt(23.4))
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -145,9 +142,10 @@ class TsdlQueryParserTest {
 
     @Test
     void filterDeclaration_disjunctiveFilterWithOneArgument() {
-      var queryString = "FILTER:\n"
-          + "            OR(lt(-2.3))\n"
-          + "          YIELD: data points";
+      var queryString = """
+          FILTER:
+                      OR(lt(-2.3))
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -163,9 +161,10 @@ class TsdlQueryParserTest {
 
     @Test
     void filterDeclaration_negatedFilter() {
-      var queryString = "FILTER:\n"
-          + "            OR(NOT(lt(25)))\n"
-          + "          YIELD: data points";
+      var queryString = """
+          FILTER:
+                      OR(NOT(lt(25)))
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -182,13 +181,14 @@ class TsdlQueryParserTest {
 
     @Test
     void filterDeclaration_multipleArguments() {
-      var queryString = "FILTER:\n"
-          + "            OR(\n"
-          + "                NOT(lt(25.1)),       gt(3.4),\n"
-          + "                NOT(gt(1000)),\n"
-          + "                lt(-3.4447)\n"
-          + "              )\n"
-          + "          YIELD: data points";
+      var queryString = """
+          FILTER:
+                      OR(
+                          NOT(lt(25.1)),       gt(3.4),
+                          NOT(gt(1000)),
+                          lt(-3.4447)
+                        )
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -227,11 +227,12 @@ class TsdlQueryParserTest {
 
     @Test
     void filterDeclaration_sampleAsArgument() {
-      var queryString = "WITH SAMPLES:\n"
-          + "            avg(_input) AS average\n"
-          + "          FILTER:\n"
-          + "            AND(gt(average))\n"
-          + "          YIELD: data points";
+      var queryString = """
+          WITH SAMPLES:
+                      avg(_input) AS average
+                    FILTER:
+                      AND(gt(average))
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -269,9 +270,10 @@ class TsdlQueryParserTest {
 
     @Test
     void eventDeclaration_validWithSample() {
-      var queryString = "WITH SAMPLES: avg(_input) AS s3\n"
-          + "          USING EVENTS: OR(gt(-3.2)) AS low, AND(lt(s3)) AS sampledHigh\n"
-          + "          YIELD: all periods";
+      var queryString = """
+          WITH SAMPLES: avg(_input) AS s3
+                    USING EVENTS: OR(gt(-3.2)) AS low, AND(lt(s3)) AS sampledHigh
+                    YIELD: all periods""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -312,9 +314,10 @@ class TsdlQueryParserTest {
     @Test
     void eventDeclaration_invalidSampleReference_throws() {
       Assertions.setMaxStackTraceElementsDisplayed(10);
-      var queryString = "USING EVENTS: AND(lt(3.5)) AS low, OR(gt(low)) AS high\n"
-          + "          CHOOSE: low precedes high\n"
-          + "          YIELD: all periods";
+      var queryString = """
+          USING EVENTS: AND(lt(3.5)) AS low, OR(gt(low)) AS high
+                    CHOOSE: low precedes high
+                    YIELD: all periods""";
 
       // depending on whether identifier 'low' is parsed before filter argument 'lt(3.5)' or after,
       // an InvalidReferenceException or UnknownIdentifierException is thrown
@@ -331,10 +334,11 @@ class TsdlQueryParserTest {
   class ChooseDeclaration {
     @Test
     void chooseDeclaration_precedes() {
-      var queryString = "USING EVENTS: AND(lt(3)) AS e1,\n"
-          + "                        OR(gt(5)) AS e2\n"
-          + "          CHOOSE: e1 precedes e2\n"
-          + "          YIELD: data points";
+      var queryString = """
+          USING EVENTS: AND(lt(3)) AS e1,
+                                  OR(gt(5)) AS e2
+                    CHOOSE: e1 precedes e2
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -350,10 +354,11 @@ class TsdlQueryParserTest {
 
     @Test
     void chooseDeclaration_follows() {
-      var queryString = "USING EVENTS: AND(lt(3)) AS e1,\n"
-          + "                        OR(gt(5)) AS e2\n"
-          + "          CHOOSE: e2 follows e1\n"
-          + "          YIELD: data points";
+      var queryString = """
+          USING EVENTS: AND(lt(3)) AS e1,
+                                  OR(gt(5)) AS e2
+                    CHOOSE: e2 follows e1
+                    YIELD: data points""";
 
       var query = PARSER.parseQuery(queryString);
 
@@ -369,9 +374,10 @@ class TsdlQueryParserTest {
 
     @Test
     void chooseDeclaration_unknownEvent_throws() {
-      var queryString = "USING EVENTS: AND(lt(3)) AS e1\n"
-          + "          CHOOSE: e1 follows e2\n"
-          + "          YIELD: data points";
+      var queryString = """
+          USING EVENTS: AND(lt(3)) AS e1
+                    CHOOSE: e1 follows e2
+                    YIELD: data points""";
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString))
           .isInstanceOf(TsdlParserException.class)
@@ -382,9 +388,10 @@ class TsdlQueryParserTest {
 
     @Test
     void chooseDeclaration_invalidEventReference_throws() {
-      var queryString = "WITH SAMPLES: min(_input) AS low, max(_input) AS high\n"
-          + "          CHOOSE: low precedes high\n"
-          + "          YIELD: all periods";
+      var queryString = """
+          WITH SAMPLES: min(_input) AS low, max(_input) AS high
+                    CHOOSE: low precedes high
+                    YIELD: all periods""";
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString))
           .isInstanceOf(TsdlParserException.class)
@@ -395,10 +402,11 @@ class TsdlQueryParserTest {
 
     @Test
     void chooseDeclaration_multipleStatements_throws() {
-      var queryString = "USING EVENTS: AND(lt(3)) AS e1,\n"
-          + "                        OR(gt(5)) AS e2\n"
-          + "          CHOOSE: e1 precedes e2, e2 follows e1\n"
-          + "          YIELD: data points";
+      var queryString = """
+          USING EVENTS: AND(lt(3)) AS e1,
+                                  OR(gt(5)) AS e2
+                    CHOOSE: e1 precedes e2, e2 follows e1
+                    YIELD: data points""";
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString)).isInstanceOf(TsdlParserException.class);
     }
@@ -422,7 +430,7 @@ class TsdlQueryParserTest {
         "sample ", "sample", "sample   ", "sample 123", "sample 1up"
     })
     void yieldDeclaration_invalidRepresentations_throws(String representation) {
-      var queryString = String.format("YIELD: %s", representation);
+      var queryString = "YIELD: %s".formatted(representation);
       assertThatThrownBy(() -> PARSER.parseQuery(queryString)).isInstanceOf(TsdlParserException.class);
     }
 
@@ -453,25 +461,26 @@ class TsdlQueryParserTest {
   @Nested
   @DisplayName("integration tests")
   class Integration {
-    private static final String FULL_FEATURE_QUERY = "WITH SAMPLES:\n"
-        + "          avg(_input) AS s1,\n"
-        + "          max(_input) AS s2,\n"
-        + "          min(_input) AS s3,\n"
-        + "          sum(_input) AS s4\n"
-        + "\n"
-        + "        FILTER:\n"
-        + "          AND(gt(s2), NOT(lt(3.5)))\n"
-        + "\n"
-        + "        USING EVENTS:\n"
-        + "          AND(lt(3.5)) AS low,\n"
-        + "          OR(NOT(gt(7))) AS high,\n"
-        + "          AND(gt(s2)) AS mid\n"
-        + "\n"
-        + "        CHOOSE:\n"
-        + "          low precedes high\n"
-        + "\n"
-        + "        YIELD:\n"
-        + "          all periods";
+    private static final String FULL_FEATURE_QUERY = """
+        WITH SAMPLES:
+                  avg(_input) AS s1,
+                  max(_input) AS s2,
+                  min(_input) AS s3,
+                  sum(_input) AS s4
+
+                FILTER:
+                  AND(gt(s2), NOT(lt(3.5)))
+
+                USING EVENTS:
+                  AND(lt(3.5)) AS low,
+                  OR(NOT(gt(7))) AS high,
+                  AND(gt(s2)) AS mid
+
+                CHOOSE:
+                  low precedes high
+
+                YIELD:
+                  all periods""";
 
     @ValueSource(strings = FULL_FEATURE_QUERY)
     @ParameterizedTest
@@ -615,9 +624,10 @@ class TsdlQueryParserTest {
 
     @Test
     void integration_duplicateIdentifierDeclarationInSeparateGroup_throws() {
-      var queryString = "WITH SAMPLES: avg(_input) AS s1\n"
-          + "          USING EVENTS: AND(lt(3.5)) AS s1\n"
-          + "          YIELD: all periods";
+      var queryString = """
+          WITH SAMPLES: avg(_input) AS s1
+                    USING EVENTS: AND(lt(3.5)) AS s1
+                    YIELD: all periods""";
 
       assertThatThrownBy(() -> PARSER.parseQuery(queryString))
           .isInstanceOf(TsdlParserException.class)
