@@ -21,7 +21,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -94,13 +93,15 @@ class CsvStorageServiceTest {
             CsvStorageProperty.INCLUDE_HEADERS, false
         )),
         true,
-        "time;value\n"
-            + "2018-02-20 09:25:04;8394.283846\n"
-            + "2019-12-02 16:27:19;-98347383.0\n"
-            + "2021-07-30 23:12:54;363.2\n"
-            + "2018-02-20 09:25:04;8394.283846\n"
-            + "2019-12-02 16:27:19;-98347383.0\n"
-            + "2021-07-30 23:12:54;363.2\n");
+        """
+            time;value
+            2018-02-20 09:25:04;8394.283846
+            2019-12-02 16:27:19;-98347383.0
+            2021-07-30 23:12:54;363.2
+            2018-02-20 09:25:04;8394.283846
+            2019-12-02 16:27:19;-98347383.0
+            2021-07-30 23:12:54;363.2
+            """);
   }
 
   @ParameterizedTest
@@ -346,7 +347,7 @@ class CsvStorageServiceTest {
       var newRow = mock(CsvRow.class);
 
       when(newRow.getFields())
-          .thenAnswer(i -> persistedData.stream().map(Object::toString).collect(Collectors.toList()));
+          .thenAnswer(i -> persistedData.stream().map(Object::toString).toList());
 
       when(newRow.getField(anyInt()))
           .thenAnswer(i -> {
