@@ -18,7 +18,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ThreadLocalRandom;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import javax.swing.JLabel;
 import javax.swing.JPanel;
@@ -122,7 +121,7 @@ public class PainterFrame extends JPanel implements MouseMotionListener {
         .mapToObj(points::get)
         .sorted(Comparator.comparingDouble(Point::getX))
         .filter(distinctByKey(Point::getX))
-        .collect(Collectors.toList());
+        .toList();
 
     var lowestDate = referenceDate != null ? referenceDate : randomInstantBetween(
         Instant.now().minus(5L * 12 * 30, ChronoUnit.DAYS), // 5 years
@@ -132,14 +131,11 @@ public class PainterFrame extends JPanel implements MouseMotionListener {
     Conditions.checkContains(Condition.ARGUMENT, List.of("Java", "CSV"), type, "Unknown output type '%s'", type);
 
     var summaryStatistics = lst.stream().mapToDouble(Point::getY).summaryStatistics();
-    switch (type) {
-      case "CSV":
-        return serializeCsv(lst, lowestDate, summaryStatistics);
-      case "Java":
-        return serializeJava(lst, lowestDate, summaryStatistics);
-      default:
-        throw Conditions.exception(Condition.ARGUMENT, "Unknown output type '%s'", type);
-    }
+    return switch (type) {
+      case "CSV" -> serializeCsv(lst, lowestDate, summaryStatistics);
+      case "Java" -> serializeJava(lst, lowestDate, summaryStatistics);
+      default -> throw Conditions.exception(Condition.ARGUMENT, "Unknown output type '%s'", type);
+    };
   }
 
   //CHECKSTYLE.OFF: MissingJavadocMethod - No documentation for external interface method needed.
@@ -198,7 +194,7 @@ public class PainterFrame extends JPanel implements MouseMotionListener {
           .append(INSTANT_FORMATTER.format(lowestDate.plus(i * 15L, ChronoUnit.MINUTES)))
           .append(", ")
           .append(point.getY())
-          .append(String.format(")%s%n", trailingComma));
+          .append(")%s%n".formatted(trailingComma));
     }
     output.append(")");
     return output.toString();
